# trello-cli-kit

./: README.md  pyproject.toml  requirements.txt
trellocli/: __init__.py  __main__.py  models.py  trelloservice.py
trellocli/cli/: cli.py  cli_config.py  cli_create.py
