[project]
name = "trellocli_elainechan01"
version = "0.1.0"
authors = [
	{ name = "Elaine Chan", email = "elaineyunru.chan@gmail.com" }
]
description = "Program to modify your Trello boards from your computer's command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"pytest==7.4.0",
    "pytest-mock==3.11.1",
	"py-trello==0.19.0",
	"python-dotenv==1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/elainechan01/trellocli"